# utcize

./: .gitignore  Cargo.toml  README.md
src/: datetime.rs  error.rs  formats.rs  lib.rs  types.rs  tz.rs
tests/: normalize_test.rs  utcize_test.rs
