[package]
name = "utcize"
version = "0.1.0"
edition = "2024"
authors = ["Jerry Maheswara<jerrymaheswara@gmail.com>"]
description = "Normalize any datetime input to UTC. Automatically."
license = "Apache-2.0"
repository = "https://github.com/jerry-maheswara-github/utcize"
readme = "README.md"
documentation = "https://docs.rs/utcize"
keywords = ["date", "time", "timezone", "iana", "zone"]
categories = ["date-and-time"]

[dependencies]
chrono = "0.4.41"
thiserror = "2.0.12"
chrono-tz = "0.10.3"